--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ debhelper (3.0.0) unstable; urgency=low
     a man page being in /usr/share/man is going to break many programs.
     Closes: #81853 (I hope the bug submitter doesn't care that
     dh_installmanpages still puts stuff in the X11R6/man directory.)
+  * dh_undocumented now the same too now.
   * dh_suidregister: re-enabled. Aj thinks that requiring people to stop
     using it is unacceptable. Who am I to disagree with a rc bug report?
     Closes: #84910
