r443:    * Build-depends on perl-5.6, since it uses 2 argument pod2man.    * Cleanups of debhelper.1 creation process.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.1) unstable; urgency=low
+
+  * Build-depends on perl-5.6, since it uses 2 argument pod2man.
+  * Cleanups of debhelper.1 creation process.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Feb 2001 16:12:59 -0800
+
 debhelper (3.0.0) unstable; urgency=low
 
   * Added dh_installman, a new program that replaces dh_installmanpages.
