r444: new dh_perl. Not yet released, since perl is not yet through incoming.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (3.0.5) unstable; urgency=low
+
+  * Updated dh_perl to a new version for the new perl organization and
+    policy. The -k flag has been done away with, as the new perl packages
+    don't make packlist files.
+  * Fixed some bugs in the new dh_perl and updated it to my current
+    debhelper coding standards.
+  * Use dh_perl to generate debhelper's own deps.
+  * Version number increase to meet perl policy.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Feb 2001 09:07:48 -0800
+
 debhelper (3.0.1) unstable; urgency=low
 
   * Build-depends on perl-5.6, since it uses 2 argument pod2man.
