r447:    * Corrected some uninitialized value stuff in dh_suidregister (actually      quite a bad bug).    * dh_installman: fixed variable socoping error, so file conversions      should work now.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (3.0.6) unstable; urgency=low
+
+  * Corrected some uninitialized value stuff in dh_suidregister (actually
+    quite a bad bug).
+  * dh_installman: fixed variable socoping error, so file conversions
+    should work now.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 16 Feb 2001 14:15:02 -0800
+
 debhelper (3.0.5) unstable; urgency=low
 
   * Updated dh_perl to a new version for the new perl organization and
