r448:    * dh_makeshlibs: only generate call to ldconfig if it really looks like      a given *.so* file is indeed a shared library.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -234,7 +234,7 @@ turn this off and use those characters raw, just prefix with a backslash.
 
 dh_makeshlibs makes the postinst and postrm scripts call ldconfig.
 
-=item 
+=item -
 
 Every file in etc/ is automatically flagged as a conffile by dh_installdeb.
 
