--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.7) unstable; urgency=low
+
+  * dh_makeshlibs: only generate call to ldconfig if it really looks like 
+    a given *.so* file is indeed a shared library.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 23 Feb 2001 14:38:50 -0800
+
 debhelper (3.0.6) unstable; urgency=low
 
   * Corrected some uninitialized value stuff in dh_suidregister (actually
