--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.8) unstable; urgency=low
+
+  * dh_perl update
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 24 Feb 2001 23:31:31 -0800
+
 debhelper (3.0.7) unstable; urgency=low
 
   * dh_makeshlibs: only generate call to ldconfig if it really looks like 
