r451:    * Fixed broken -e #SCRIPT# tests in init script start/stop/restart code.      Arrgh. All packages built with the old code (that is, all daemon      packages built with debhelper 3.0.9!) are broken. Closes: #89472

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.10) unstable; urgency=medium
+
+  * Fixed broken -e #SCRIPT# tests in init script start/stop/restart code.
+    Arrgh. All packages built with the old code (that is, all daemon
+    packages built with debhelper 3.0.9!) are broken. Closes: #89472
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Mar 2001 06:10:03 -0500
+
 debhelper (3.0.9) unstable; urgency=low
 
   * Modified to use dpkg-architecture instead of dpkg --print-architecture.
