r455:    * Applied a patch from Anton Zinoviev <anton@lml.bas.bg> to pass -e      to mkfontdir. Closes: #89418

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.12) unstable; urgency=low
+
+  * Applied a patch from Anton Zinoviev <anton@lml.bas.bg> to pass -e
+    to mkfontdir. Closes: #89418
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 16 Mar 2001 21:03:29 -0800
+
 debhelper (3.0.11) unstable; urgency=low
 
   * dh_makeshlibs: don't follow links to .so files. Instead, we will look
