r456:    * dh_makeshlibs: more support for nasty soname formats, Closes: #90520

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.13) unstable; urgency=low
+
+  * dh_makeshlibs: more support for nasty soname formats, Closes: #90520
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2001 15:00:42 -0800
+
 debhelper (3.0.12) unstable; urgency=low
 
   * Applied a patch from Anton Zinoviev <anton@lml.bas.bg> to pass -e
