r457:    * dh_strip: ensure that the file _ends_ with `.a'. Closes: #90647

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.14) unstable; urgency=low
+
+  * dh_strip: ensure that the file _ends_ with `.a'. Closes: #90647
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2001 20:21:11 -0800
+
 debhelper (3.0.13) unstable; urgency=low
 
   * dh_makeshlibs: more support for nasty soname formats, Closes: #90520
