--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.15) unstable; urgency=low
+
+  * Typo, Closes: #92407
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  3 Apr 2001 12:15:02 -0700
+
 debhelper (3.0.14) unstable; urgency=low
 
   * dh_strip: ensure that the file _ends_ with `.a'. Closes: #90647
