--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.16) unstable; urgency=low
+
+  * Documented -isp, Closes: #93983
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 14 Apr 2001 19:16:47 -0700
+
 debhelper (3.0.15) unstable; urgency=low
 
   * Typo, Closes: #92407
