--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.17) unstable; urgency=low
+
+  * dh_shlibdeps: document that -l accepts multiple dirs, and
+    make multiple dirs absolute properly, not just the first.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2001 23:20:30 -0700
+
 debhelper (3.0.16) unstable; urgency=low
 
   * Documented -isp, Closes: #93983
