r463:    * dh_perl: updates from bod:      - Provide minimum version for arch-indep module dependencies        (perl-policy 1,18, section 3.4.1).      - Always update substvars, even if Perl:Depends is empty.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (3.0.18) unstable; urgency=low
+
+  * dh_perl: updates from bod:
+    - Provide minimum version for arch-indep module dependencies
+      (perl-policy 1,18, section 3.4.1).
+    - Always update substvars, even if Perl:Depends is empty.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 21 Apr 2001 15:13:15 -0700
+
 debhelper (3.0.17) unstable; urgency=low
 
   * dh_shlibdeps: document that -l accepts multiple dirs, and
