r464:    * Now uses html2text rather than lynx for converting html changelogs.      The program generates better results, and won't annoy the people who      were oddly annoyed at having to install lynx. Instead, it will annoy a      whole other set of people, I'm sure. Closes: #93747

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (3.0.19) unstable; urgency=low
+
+  * Now uses html2text rather than lynx for converting html changelogs.
+    The program generates better results, and won't annoy the people who
+    were oddly annoyed at having to install lynx. Instead, it will annoy a
+    whole other set of people, I'm sure. Closes: #93747
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 May 2001 21:23:46 -0400
+
 debhelper (3.0.18) unstable; urgency=low
 
   * dh_perl: updates from bod:
