r465:    * Modified the postrm fragment for dh_installxfonts to not try to delete      any files. The responsibility for doing so devolves onto update-fonts-*      (which don't yet, but will). See bug #94752

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.20) unstable; urgency=low
+
+  * Modified the postrm fragment for dh_installxfonts to not try to delete
+    any files. The responsibility for doing so devolves onto update-fonts-*
+    (which don't yet, but will). See bug #94752
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 11 May 2001 13:30:43 -0400
+
 debhelper (3.0.19) unstable; urgency=low
 
   * Now uses html2text rather than lynx for converting html changelogs.
