r466:    * Corrected bashism (echo -e, DAMNIT), in rules file that resulted in a      corrupted Dh_Version.pm. Closes: #97236

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.21) unstable; urgency=low
+
+  * Corrected bashism (echo -e, DAMNIT), in rules file that resulted in a
+    corrupted Dh_Version.pm. Closes: #97236
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 May 2001 12:21:40 -0400
+
 debhelper (3.0.20) unstable; urgency=low
 
   * Modified the postrm fragment for dh_installxfonts to not try to delete
