--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.22) unstable; urgency=low
+
+  * dh_installinfo: doc enchancement, Closes: #97515
+  * dh_md5sums: don't fail if pwd has spaces in it (must be scraping the
+    bottom of the bug barrel here). Closes: #97404
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 May 2001 21:22:47 -0400
+
 debhelper (3.0.21) unstable; urgency=low
 
   * Corrected bashism (echo -e, DAMNIT), in rules file that resulted in a
