r469:    * Missing semi-colon.    * Call dh_shlibdeps as part of build process, as simple guard against      this (dh_* should be called, really).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.24) unstable; urgency=low
+
+  * Missing semi-colon.
+  * Call dh_shlibdeps as part of build process, as simple guard against
+    this (dh_* should be called, really).
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 15 May 2001 10:27:34 -0400
+
 debhelper (3.0.23) unstable; urgency=low
 
   * dh_shlibdeps: the -l switch now just adds to LD_LIBRARY_PATH, if it is
