--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.25) unstable; urgency=low
+
+  * dh_makeshlins: append to LD_LIBRARY_PATH at start, not each time
+    through loop. Closes: #98598
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 May 2001 14:16:50 -0400
+
 debhelper (3.0.24) unstable; urgency=low
 
   * Missing semi-colon.
