r471:    * Always include package name in maintainer script fragment filenames      and generated shlibs files (except for in DH_COMPAT=1 mode). This is a      purely cosmetic change, and if it breaks anything, you were using an      undocumented interface. Closes: #95387

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (3.0.26) unstable; urgency=low
+
+  * Always include package name in maintainer script fragment filenames 
+    and generated shlibs files (except for in DH_COMPAT=1 mode). This is a
+    purely cosmetic change, and if it breaks anything, you were using an
+    undocumented interface. Closes: #95387
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 May 2001 16:31:46 -0400
+
 debhelper (3.0.25) unstable; urgency=low
 
   * dh_makeshlins: append to LD_LIBRARY_PATH at start, not each time
