r473:    * dh_clean: clean up temp files used by earlier versons of debhelper.      Closes: #99169

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.28) unstable; urgency=low
+
+  * dh_clean: clean up temp files used by earlier versons of debhelper.
+    Closes: #99169
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 30 May 2001 16:24:09 -0400
+
 debhelper (3.0.27) unstable; urgency=low
 
   * Fixed issues with extended parameters to dh_gencontrol including spaces
