--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.29) unstable; urgency=low
+
+  * Added -X flag to dh_makeshlibs, for packages with wacky plugins that
+    look just like shared libs, but are not.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  1 Jun 2001 14:27:06 -0400
+
 debhelper (3.0.28) unstable; urgency=low
 
   * dh_clean: clean up temp files used by earlier versons of debhelper.
